BUGFIX: more options don't get hidden by default

--- a/css/FieldEditor.css
+++ b/css/FieldEditor.css
@@ -197,7 +197,7 @@
 				
 		/* HIDE */
 		#Fields_fields li.EditableFormField .hidden {
-			display: none;
+			display: none !important;
 		}
 
 		/* Holder to prevent form from collapsing */
